# algebra

./: README.md  pyproject.toml
lie_groups/: e2.py  heisenberg.py  killing.py  representations.py  so3.py  so31.py  su2.py  sun.py  test_e2.py  test_su2.py  test_util.py  types.py  util.py  viz.py
notebooks/: scratch.ipynb  scratch.notebook.py  scratch.py
